<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="nav_graph"
    app:startDestination="@id/launchFragment">

    <fragment
        android:id="@+id/launchFragment"
        android:name="com.example.android.politicalpreparedness.launch.LaunchFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_launch">
        <action
            android:id="@+id/action_launchFragment_to_electionsFragment"
            app:destination="@id/electionsFragment" />
        <action
            android:id="@+id/action_launchFragment_to_representativeFragment"
            app:destination="@id/representativeFragment"
            app:enterAnim="@anim/anim_in"
            app:popEnterAnim="@anim/anim_out" />
    </fragment>

    <fragment
        android:id="@+id/representativeFragment"
        android:name="com.example.android.politicalpreparedness.representative.DetailFragment"
        android:label="@string/fragment_representative"
        tools:layout="@layout/fragment_representative">
    </fragment>
    <fragment
        android:id="@+id/voterInfoFragment"
        android:name="com.example.android.politicalpreparedness.election.VoterInfoFragment"
        android:label="@string/fragment_voter_info">
        <argument
            android:name="election"
            app:argType="com.example.android.politicalpreparedness.network.models.Election" />
    </fragment>
    <fragment
        android:id="@+id/electionsFragment"
        android:name="com.example.android.politicalpreparedness.election.ElectionsFragment"
        android:label="@string/fragment_elections">
        <action
            android:id="@+id/action_electionsFragment_to_voterInfoFragment"
            app:destination="@id/voterInfoFragment"
            app:enterAnim="@anim/anim_in"
            app:popEnterAnim="@anim/anim_out" />
    </fragment>

</navigation>
