<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <!-- Add data binding node -->
    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>


    <!-- Add motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_representative_scene">

        <!-- Add visual styling and content -->
        <TextView
            android:id="@+id/search_title"
            style="@style/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_representative_search"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Add data binding value -->
        <!-- Add visual styling and content -->
        <EditText
            android:id="@+id/address_line_1"
            style="@style/default_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/txt_address_line1"
            android:text="@{viewModel.address.line1}"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_title" />

        <!-- Add data binding value -->
        <!-- Add visual styling and content -->
        <EditText
            android:id="@+id/address_line_2"
            style="@style/default_edittext"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:autofillHints=""
            android:hint="@string/txt_address_line2"
            android:inputType="textPostalAddress"
            android:text="@{viewModel.address.line2}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_1" />

        <!-- Add data binding value -->
        <!-- Add visual styling and content -->
        <EditText
            android:id="@+id/city"
            style="@style/default_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/txt_city"
            android:inputType="textPostalAddress"
            android:text="@{viewModel.address.city}"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_2" />

        <!-- Add default values from provided resources  -->
        <!-- Add data binding value -->
        <!-- Add visual styling and content -->
        <Spinner
            android:id="@+id/state"
            style="@style/default_edittext"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints=""
            android:entries="@array/states"
            android:inputType="textPostalAddress"
            app:stateValue="@{viewModel.address.state}"
            app:layout_constraintBottom_toBottomOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintTop_toTopOf="@id/city" />

        <!-- Add data binding value -->
        <!-- Add visual styling and content -->
        <EditText
            android:id="@+id/zip"
            style="@style/default_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/txt_zip"
            android:inputType="number"
            android:maxLength="5"
            android:text="@{viewModel.address.zip}"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city" />

        <!-- Add visual styling and label -->
        <Button
            android:id="@+id/button_search"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_my_representation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/zip" />

        <!-- Add visual styling and content -->
        <Button
            android:id="@+id/button_location"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/min_padding"
            android:text="@string/txt_btn_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_search" />

        <!-- Add visual styling and content -->
        <TextView
            android:id="@+id/representative_title"
            style="@style/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_representative"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_location" />

        <!-- Add Representatives RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_representative"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/representative_title"
            android:list_live_data="@{viewModel.representatives}"
            motion:listitem="@layout/representative_item" />


        <!-- Add visual styling and content -->
        <TextView
            android:id="@+id/list_placeholder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:textAlignment="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
            motion:visibilityMode="ignore" />


    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>